# dejavu

./: .clang-format  .gitignore  CMakeLists.txt  DOCS.md  Doxyfile  LICENSE  README.md  ag2-11  ag2-13  ag2-2  ag2-3  ag2-4  ag2-5  ag2-7  ag2-8  ag2-9  auto_blaster.cpp  auto_blaster.h  badtree.cpp  badtree.h  bench.cpp  bench.py  bench_iso.cpp  bench_process.py  bfs.cpp  bfs.h  bijection.cpp  bijection.h  coloring.cpp  coloring.h  coloring_bucket.cpp  coloring_bucket.h  components.h  concurrentqueue.h  configuration.h  dejavu.cbp  dejavu.cpp  dejavu.h  dejavu_api.cpp  dejavu_api.h  (+77 more)
.github/workflows/: build.yml
conauto/: conauto.h
graph_tools/: k.py
sassy/: README.md  coloring.h  graph.h  invariant.h  preprocessor.h  refinement.h  selector.h  sgraph.h  utility.h
saucy/: saucy.c  saucy.h
tests/: automorphism_test.cpp  graphs_test.cpp  helper_functions_test.h  main_test.cpp  markset_test.cpp  orbit_test.cpp  refinement_test.cpp  schreier_test.cpp  simple_graphs_test.cpp  static_graph_test.cpp  worklist_test.cpp  workset_test.cpp  workspace_test.cpp
tools/: bench.py  bench_process.py  k.py  memtest.py
